tests/golden/expected/scene_during_unknown.stdout.txt
Compile error: tests/fixtures/scene_during_unknown.lamp:18: type error: unknown scene "wach" in during guard
  18 | before wait during wach:
    | ^
